fix overlapping slideshow and draft pool title

--- a/app/assets/stylesheets/draft.scss
+++ b/app/assets/stylesheets/draft.scss
@@ -52,6 +52,7 @@
 
 #cardpooltable {
   margin-left: 10px;
+  width: 100%;
 }
 
 
