--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,6 +5,7 @@
   width: 60%;
   padding: 10px;
   margin-top: 100px;
+  z-index: 1;
 }
 
 .slideshow img {
